/* 
  Localizable.strings
  ProgrammerCalc

  Created by Ivan Ghiba on 24.10.2021.
  Copyright © 2021 ighiba. All rights reserved.
*/

"1's" = "1's";
"2's" = "2's";
"Cannot divide by zero" = "Cannot divide by zero";

"Use system appearance" = "Use system appearance";
"Theme" = "Appearance";
"Light Mode" = "Light";
"Dark Mode" = "Dark";
"Old School" = "Old School";
"About app" = "About app";
"Rate app" = "Rate app";
"Contact us" = "Contact us";
"Settings" = "Settings";
"Appearance" = "Appearance";
"Tapping sounds" = "Tapping sounds";
"Haptic feedback" = "Haptic feedback";
"Conversion settings" = "Conversion settings";
"Max number of digits after point:  %d" = "Max number of digits after point:  %d";
"Change word size" = "Change word size";
"Done" = "Done";
"Description" = "Description";
"DescriptionFullText" = "This app is intended for the conversion of numbers between different number systems, as well as performing some arithmetic and bitwise operations with these numbers. All this is on your phone with the usual interface. If you are a beginner in programming or computer science, then this app could be useful for you.\n\nYour suggestions and comments can be sent through the contact form.\n\nThank you for choosing this app.";

"Copy last input" = "Copy last input";
"Copy last output" = "Copy last output";

"Error" = "Error";
"Mail services are not available" = "Mail services are not available";
